# Financial-Literacy-for-Students

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml
dataset/: qrels.json  qrels_secret_team_01.json  queries.json  secret_queries_team_01.json
eval/: main.py  metrics.py  plots.py
report/: main.tex
report/sections/: cover.tex  dataset_analysis.tex  discussion.tex  implementation.tex  index.tex  lists.tex  processing.tex  project_plan.tex  references.tex  retrieval_model.tex
src/: DataProcessing.py  ProcessesData.py  bim_search.py  bm25_search.py  language_model.py  vsm_search.py
stats/: dataset_stats.py
