[project]
name = "financial-literacy-for-students"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.9",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pytrec-eval>=0.5",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.8.0",
    "streamlit>=1.57.0",
]
